# webTutor

./: .gitignore  LICENSE  README.md  content.js  main.py  manifest.json  pyproject.toml
backend/: main.py
backend/tests/: test_main.py
extensions/: content.js  manifest.json
frontend/: content.js  manifest.json
