[project]
name = "webtutor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "kokoro-onnx>=0.5.0",
    "numpy>=2.4.4",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.1",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "uvicorn>=0.40.0",
]
